--- a/src/com/ats/gui/alert/NewVersionContent.mxml
+++ b/src/com/ats/gui/alert/NewVersionContent.mxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" 
-		 xmlns:text="com.caipture.gui.text.*">
+		 xmlns:s="library://ns.adobe.com/flex/spark" >
 	
 	<fx:Metadata>
 		[Event(name="enterKey", type="flash.events.Event")]
@@ -10,8 +8,6 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import com.greensock.TweenMax;
-			
 			[Bindable]
 			public var version:String;
 			
@@ -28,8 +24,7 @@
 		]]>
 	</fx:Script>
 
-	<s:VGroup id="infoGroup" visible="true" includeInLayout="true" gap="5"
-			  horizontalAlign="center" width="100%" height="100%" fontSize="14">
+	<s:VGroup id="infoGroup" visible="true" includeInLayout="true" gap="5" horizontalAlign="center" width="100%" height="100%" fontSize="14">
 		<s:Label id="info1" color="0xadb5bd" text="A new version is available" fontWeight="bold"/>
 		<s:Label id="info2" color="0xadb5bd" fontStyle="italic" fontSize="12" text="Download and install version '{version}' ?"/>
 	</s:VGroup>
